@@ -8,10 +8,14 @@
 
 
 /* Repository URL */
-#define OSLIST_URL                        "https://downloads.raspberrypi.org/os_list_imagingutility.json"
+#define OSLIST_URL                        "https://downloads.raspberrypi.org/os_list_imagingutility_v2.json"
 
 /* Time synchronization URL (only used on eglfs QPA platform, URL must be HTTP) */
-#define TIME_URL                          "http://downloads.raspberrypi.org/os_list_imagingutility.json?time_synchronization"
+#define TIME_URL                          "http://downloads.raspberrypi.org/os_list_imagingutility_v2.json?time_synchronization"
+
+/* Phone home the name of images downloaded for image popularity ranking */
+#define TELEMETRY_URL                     "https://rpi-imager-stats.raspberrypi.org/downloads?url=$imageurl&os=$parentcategory&image=$osname"
+#define TELEMETRY_ENABLED_DEFAULT         true
 
 /* Hash algorithm for verifying (uncompressed image) checksum */
 #define OSLIST_HASH_ALGORITHM             QCryptographicHash::Sha256
