@@ -261,6 +261,7 @@ ApplicationWindow {
         height: parent.height-50
         padding: 0
         closePolicy: Popup.CloseOnEscape | Popup.CloseOnPressOutside
+        property string categorySelected : ""
 
         // background of title
         Rectangle {
@@ -936,13 +937,16 @@ ApplicationWindow {
             else
                 suboslist.currentIndex = -1
             osswipeview.setCurrentIndex(1)
+            ospopup.categorySelected = d.name
         } else if (typeof(d.subitems_url) == "string" && d.subitems_url !== "") {
             if (d.subitems_url === "internal://back")
             {
                 osswipeview.setCurrentIndex(0)
+                ospopup.categorySelected = ""
             }
             else
             {
+                ospopup.categorySelected = d.name
                 var suburl = d.subitems_url
                 if (subosmodel.count>1)
                 {
@@ -994,7 +998,7 @@ ApplicationWindow {
                 }
             }
         } else {
-            imageWriter.setSrc(d.url, d.image_download_size, d.extract_size, typeof(d.extract_sha256) != "undefined" ? d.extract_sha256 : "", typeof(d.contains_multiple_files) != "undefined" ? d.contains_multiple_files : false)
+            imageWriter.setSrc(d.url, d.image_download_size, d.extract_size, typeof(d.extract_sha256) != "undefined" ? d.extract_sha256 : "", typeof(d.contains_multiple_files) != "undefined" ? d.contains_multiple_files : false, ospopup.categorySelected, d.name)
             osbutton.text = d.name
             ospopup.close()
             if (imageWriter.readyToWrite()) {
